# Atris

./: Cargo.toml
src/: algebra.rs  atris.rs  atrissession.rs  block.rs  figure.rs  gamemode.rs  grid.rs  gridsession.rs
src/block/: block.rs  blocktype.rs  mod.rs  state.rs
src/block/blocktype/: rock.rs  standard.rs
src/block/blocktypes/: mod.rs  rock.rs  standard.rs
src/blocktypes/: blocktypes.rs  mod.rs
src/figure/: algebra.rs  figure.rs  mod.rs  shape.rs  shapes.rs
src/figure/shape/: shape.rs  shapes.rs
src/figure/shapes/: shapes.rs
src/gamemodes/: custom.rs  mod.rs  standard.rs
src/grid/: figure.rs  grid.rs  mod.rs
src/piece/: mod.rs  piece.rs
src/piece/shape/: shape.rs  shapes.rs
tests/: test1.rs
